--- a/core/components/commerce_abandonedcart/docs/changelog.txt
+++ b/core/components/commerce_abandonedcart/docs/changelog.txt
@@ -1,5 +1,9 @@
 ++ Abandoned Cart for Commerce
 
+++ v1.0.1-pl - released on 05/21/2021
+++++++++++++++++++++++++++
+- Fix converting carts and create assets
+
 ++ v1.0.0-pl - released on 10/23/2020
 ++++++++++++++++++++++++++
-- Initiial release
+- Initial release
